--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
 COPY/.DS_Store
 .DS_Store
+COPY/.DS_Store
+COPY/.DS_Store
+COPY/.DS_Store
+COPY/Minecraft-Overviewer-minecraft113-fixed/overviewer_core/.DS_Store
