--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ COPY/.DS_Store
 COPY/.DS_Store
 COPY/.DS_Store
 COPY/Minecraft-Overviewer-minecraft113-fixed/overviewer_core/.DS_Store
+COPY/.DS_Store
+.DS_Store
+.DS_Store
