Added test map file. Changed path to "server" and not "world" Better documentation and examples.

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ COPY/.DS_Store
 COPY/.DS_Store
 COPY/Minecraft-Overviewer-minecraft113-fixed/overviewer_core/.DS_Store
 COPY/.DS_Store
+export
 .DS_Store
 .DS_Store
