--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -3,6 +3,9 @@ name: Build and push to Docker Hub twice daily
 on: 
   schedule:
   - cron: "0 */12 * * *"
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
   
 jobs:
 
